--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
   "name": "rltsquare/product-review-images",
   "description": "Magento 2 extension by RLTSquare that allows user to include images while submitting product reviews.",
   "require": {
-    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
+    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.3.0|~7.4.0|^8.0",
     "magento/module-review" : ">100.1.2"
   },
   "type":"magento2-module",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license":[
     "proprietary"
   ],
